<resources>
    <string name="app_name">ConversationalIST</string>
    <string name="welcome">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="to_continue">Login to continue</string>
    <string name="create_new_account">Create New Account</string>
    <string name="conversationalist">ConversationalIST</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="search">Search for ChatRooms</string>
    <string name="guests" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

</resources>