<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:padding="24dp"
    android:overScrollMode="never"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/conversationalist"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingStart="16sp"
            android:paddingEnd="16sp" />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16sp"
            android:paddingEnd="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:onClick="signIn" />


        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="12sp"
            android:onClick="createNewAccount" />

        <Button
            android:id="@+id/Guess"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="login as guest"
            android:onClick="guests" />

    </LinearLayout>

</ScrollView>